        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12452
        XPath id() function is not supported

WebCore:
        * xml/XPathFunctions.cpp:
        (WebCore::XPath::isWhitespace): A helper to detect XML whitespace.

        (WebCore::XPath::FunId::isConstant):
        (WebCore::XPath::FunId::doEvaluate):
        (WebCore::XPath::FunctionMapping::):
        Implemented id().

LayoutTests:
        * dom/svg/level3/xpath/Conformance_ID-expected.txt:
        This test now passes.

        * fast/xpath/complex-id-expected.txt: Added.
        * fast/xpath/complex-id.html: Added.
        A test for more advanced id() capabilities.



Canonical link: https://commits.webkit.org/16205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19263 268f45cc-cd09-0410-ab3c-d52691b4dbfc